# gz_px4_base

./: .gitignore  CMakeLists.txt  README.md  package.xml  run_gz_px4.sh
config/: bridge_config.yaml  gz_config.yaml  px4_config.txt  ros_gz_bridge.yaml  rviz_config.rviz
launch/: gz_sim.launch.py  ros_gz_bridge_launch.launch.py
models/test/: model.sdf
models/x500_base_ideal/: model.sdf
models/x500_ideal/: model.sdf
models/x500_lidar/: model.config  model.sdf  model.urdf  transforms.urdf
scripts/: run_gz_px4.sh
src/gz_px4/: CMakeLists.txt  package.xml
src/gz_px4/include/: frame_transform.hpp  tf_pub.hpp
src/gz_px4/launch/: bridge.launch.py  rviz.launch.py  tf.launch.py
src/gz_px4/src/: tf_pub.cpp
src/px4_interface/: CMakeLists.txt  package.xml
src/px4_interface/include/: ros_control.hpp
src/px4_interface/src/: offboard_control.cpp  ros_control.cpp
worlds/: test.sdf
